; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/radio/extr_radio-shark.c_usb_shark_release.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/radio/extr_radio-shark.c_usb_shark_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.v4l2_device = type { i32 }
%struct.shark_device = type { %struct.shark_device*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.v4l2_device*)* @usb_shark_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @usb_shark_release(%struct.v4l2_device* %0) #0 {
  %2 = alloca %struct.v4l2_device*, align 8
  %3 = alloca %struct.shark_device*, align 8
  store %struct.v4l2_device* %0, %struct.v4l2_device** %2, align 8
  %4 = load %struct.v4l2_device*, %struct.v4l2_device** %2, align 8
  %5 = call %struct.shark_device* @v4l2_dev_to_shark(%struct.v4l2_device* %4)
  store %struct.shark_device* %5, %struct.shark_device** %3, align 8
  %6 = load %struct.shark_device*, %struct.shark_device** %3, align 8
  %7 = getelementptr inbounds %struct.shark_device, %struct.shark_device* %6, i32 0, i32 1
  %8 = call i32 @v4l2_device_unregister(i32* %7)
  %9 = load %struct.shark_device*, %struct.shark_device** %3, align 8
  %10 = getelementptr inbounds %struct.shark_device, %struct.shark_device* %9, i32 0, i32 0
  %11 = load %struct.shark_device*, %struct.shark_device** %10, align 8
  %12 = call i32 @kfree(%struct.shark_device* %11)
  %13 = load %struct.shark_device*, %struct.shark_device** %3, align 8
  %14 = call i32 @kfree(%struct.shark_device* %13)
  ret void
}

declare dso_local %struct.shark_device* @v4l2_dev_to_shark(%struct.v4l2_device*) #1

declare dso_local i32 @v4l2_device_unregister(i32*) #1

declare dso_local i32 @kfree(%struct.shark_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
